# azcam-mock

./: README.md  pyproject.toml
azcam_mock/: __init__.py  console.py  server.py
azcam_mock/datafolder/observing_scripts/: test.txt
azcam_mock/datafolder/parameters/: parameters_server_mock.ini
support/: start_console_mock.py  start_server_mock.py
